@@ -1,6 +1,5 @@
 package ua.com.fielden.platform.dao.dynamic;
 
-import com.google.inject.Injector;
 import org.hibernate.HibernateException;
 import org.hibernate.MappingException;
 import org.hibernate.cfg.Configuration;
@@ -14,7 +13,6 @@ import ua.com.fielden.platform.entity.AbstractEntity;
 import ua.com.fielden.platform.entity.annotation.IsProperty;
 import ua.com.fielden.platform.entity.factory.EntityFactory;
 import ua.com.fielden.platform.entity.query.DbVersion;
-import ua.com.fielden.platform.entity.query.IDbVersionProvider;
 import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces.ICompleted;
 import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces.IJoin;
 import ua.com.fielden.platform.entity.query.model.ConditionModel;
@@ -27,62 +25,52 @@ import ua.com.fielden.platform.entity_centre.review.DynamicQueryBuilder;
 import ua.com.fielden.platform.eql.dbschema.HibernateMappingsGenerator;
 import ua.com.fielden.platform.eql.dbschema.PropertyInlinerImpl;
 import ua.com.fielden.platform.eql.meta.EqlTables;
-import ua.com.fielden.platform.ioc.ApplicationInjectorFactory;
+import ua.com.fielden.platform.error.Result;
 import ua.com.fielden.platform.meta.DomainMetadataBuilder;
 import ua.com.fielden.platform.meta.DomainMetadataUtils;
-import ua.com.fielden.platform.meta.IDomainMetadata;
-import ua.com.fielden.platform.meta.IDomainMetadataUtils;
 import ua.com.fielden.platform.persistence.types.PlatformHibernateTypeMappings;
 import ua.com.fielden.platform.reflection.PropertyTypeDeterminator;
-import ua.com.fielden.platform.sample.domain.TgBogie;
-import ua.com.fielden.platform.test.CommonEntityTestIocModuleWithPropertyFactory;
-import ua.com.fielden.platform.test.EntityTestIocModuleWithPropertyFactory;
+import ua.com.fielden.platform.sample.domain.*;
+import ua.com.fielden.platform.security.ISecurityToken;
+import ua.com.fielden.platform.security.interception.MasterEntity_CanRead_unauthorisedProp_Token;
+import ua.com.fielden.platform.security.user.SecurityRoleAssociation;
+import ua.com.fielden.platform.security.user.SecurityRoleAssociationCo;
+import ua.com.fielden.platform.security.user.UserRole;
+import ua.com.fielden.platform.test_config.AbstractDaoTestCase;
 import ua.com.fielden.platform.utils.IDates;
 
 import java.io.ByteArrayInputStream;
-import java.io.UnsupportedEncodingException;
 import java.util.*;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.util.Optional.empty;
+import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertThrows;
+import static ua.com.fielden.platform.entity.AbstractEntity.KEY;
 import static ua.com.fielden.platform.entity.query.IDbVersionProvider.constantDbVersion;
 import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.cond;
 import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.select;
 import static ua.com.fielden.platform.entity_centre.review.DynamicQueryBuilder.*;
+import static ua.com.fielden.platform.entity_centre.review.criteria.EntityQueryCriteriaUtils.createCompletedQuery;
+import static ua.com.fielden.platform.utils.CollectionUtil.setOf;
 
-/**
- * A test for {@link DynamicQueryBuilder}.
- *
- * @author TG Team
- *
- */
-@SuppressWarnings({ "serial", "unchecked" })
-public class DynamicQueryBuilderSqlTest {
-    private final static Injector injector = createInjector();
-    private final static EntityFactory entityFactory = createFactory();
-    private final static IDates dates = injector.getInstance(IDates.class);
+/// A test for [DynamicQueryBuilder].
+///
+@SuppressWarnings({"unchecked"})
+public class DynamicQueryBuilderSqlTest extends AbstractDaoTestCase {
 
-    private static Injector createInjector() {
-        final EntityTestIocModuleWithPropertyFactory module = new CommonEntityTestIocModuleWithPropertyFactory();
-        return new ApplicationInjectorFactory().add(module).getInjector();
-    }
+    private IDates dates;
 
-    private static EntityFactory createFactory() {
-        return injector.getInstance(EntityFactory.class);
-    }
+    private String alias;
+    private Class<? extends AbstractEntity<?>> masterKlass, slaveCollectionType, evenSlaverCollectionType;
+    private IJoin<? extends AbstractEntity<?>> iJoin;
+    private Map<String, QueryProperty> queryProperties;
 
-    private final String alias;
-    private final Class<? extends AbstractEntity<?>> masterKlass, slaveCollectionType, evenSlaverCollectionType;
-    private final IJoin<? extends AbstractEntity<?>> iJoin;
-    private final Map<String, QueryProperty> queryProperties;
-
-    {
+    private void init(final EntityFactory entityFactory) {
         alias = "alias_for_main_criteria_type";
         // enhance domain with ALL / ANY calc properties
-        final IDomainTreeEnhancer dte = new DomainTreeEnhancer(entityFactory, new HashSet<Class<?>>() {
-            {
-                add(MasterEntity.class);
-            }
-        });
+        final IDomainTreeEnhancer dte = new DomainTreeEnhancer(entityFactory, Set.of(MasterEntity.class));
         dte.addCalculatedProperty(MasterEntity.class, "collection", "masterEntityProp", "Any of masterEntityProp", "Desc", CalculatedPropertyAttribute.ANY, "masterEntityProp", IsProperty.DEFAULT_PRECISION, IsProperty.DEFAULT_SCALE);
         dte.addCalculatedProperty(MasterEntity.class, "collection", "bigDecimalProp", "Any of bigDecimalProp", "Desc", CalculatedPropertyAttribute.ANY, "bigDecimalProp", 19, 4);
         dte.addCalculatedProperty(MasterEntity.class, "collection", "dateProp", "Any of dateProp", "Desc", CalculatedPropertyAttribute.ANY, "dateProp", IsProperty.DEFAULT_PRECISION, IsProperty.DEFAULT_SCALE);
@@ -107,72 +95,70 @@ public class DynamicQueryBuilderSqlTest {
 
         final Configuration hibConf = new Configuration();
 
-        final List<Class<? extends AbstractEntity<?>>> domainTypes = new ArrayList<>();
-        domainTypes.add(MasterEntity.class);
-        domainTypes.add(SlaveEntity.class);
-        domainTypes.add(EvenSlaverEntity.class);
+        final List<Class<? extends AbstractEntity<?>>> domainTypes = List.of(MasterEntity.class, SlaveEntity.class, EvenSlaverEntity.class);
         final IApplicationDomainProvider appDomain = () -> domainTypes;
 
-        final IDbVersionProvider dbVersionProvider = constantDbVersion(DbVersion.H2);
-        final IDomainMetadata domainMetadata = new DomainMetadataBuilder(
+        final var dbVersionProvider = constantDbVersion(DbVersion.H2);
+        final var domainMetadata = new DomainMetadataBuilder(
                 new PlatformHibernateTypeMappings.Provider(dbVersionProvider).get(), domainTypes, dbVersionProvider)
                 .build();
-        final IDomainMetadataUtils domainMetadataUtils = new DomainMetadataUtils(appDomain, domainMetadata);
+        final var domainMetadataUtils = new DomainMetadataUtils(appDomain, domainMetadata);
         try {
             hibConf.addInputStream(new ByteArrayInputStream(
                     new HibernateMappingsGenerator(domainMetadata, domainMetadataUtils,
                                                    dbVersionProvider,
                                                    new EqlTables(domainMetadata, domainMetadataUtils),
                                                    new PropertyInlinerImpl(domainMetadata))
-                            .generateMappings().getBytes("UTF8")));
-        } catch (final MappingException | UnsupportedEncodingException e) {
+                            .generateMappings().getBytes(UTF_8)));
+        } catch (final MappingException e) {
             throw new HibernateException("Could not add mappings.", e);
         }
 
-        final List<String> propertyNames = Arrays.asList(new String[] { //
-        "integerProp", //
-        "bigDecimalProp", //
-        "moneyProp", //
-        "dateProp", //
-        "booleanProp", //
-        "stringProp", //
-        "entityProp", //
-        "entityProp.masterEntityProp", //
-        "entityProp.integerProp", //
-        "entityProp.bigDecimalProp", //
-        "entityProp.moneyProp", //
-        "entityProp.dateProp", //
-        "entityProp.booleanProp", //
-        "entityProp.stringProp", //
-        "collection.masterEntityProp", //
-        "collection.integerProp", //
-        "collection.bigDecimalProp", //
-        "collection.dateProp", //
-        "collection.stringProp", //
-        "collection.booleanProp", //
-        "collection.anyOfMasterEntityProp", //
-        "collection.anyOfBigDecimalProp", //
-        "collection.anyOfDateProp", //
-        "collection.anyOfIntegerProp", //
-        "collection.anyOfMoneyProp", //
-        "collection.allOfMasterEntityProp", //
-        "collection.allOfBigDecimalProp", //
-        "collection.allOfDateProp", //
-        "entityProp.collection.slaveEntityProp", //
-        "entityProp.collection.integerProp", //
-        "entityProp.collection.bigDecimalProp", //
-        "entityProp.collection.dateProp", //
-        "entityProp.collection.stringProp", //
-        "entityProp.collection.booleanProp", //
-        "entityProp.collection.allOfSlaveEntityProp", //
-        "entityProp.collection.allOfBigDecimalProp", //
-        "entityProp.collection.allOfDateProp", //
-        "entityProp.collection.anyOfIntegerProp", //
-        "entityProp.collection.anyOfMoneyProp" //
+        final var propertyNames = List.of(
+                "integerProp",
+                "bigDecimalProp",
+                "moneyProp",
+                "dateProp",
+                "booleanProp",
+                "stringProp",
+                "entityProp",
+                "authorisedProp",
+                "unauthorisedProp",
+                "entityProp.masterEntityProp",
+                "entityProp.integerProp",
+                "entityProp.bigDecimalProp",
+                "entityProp.moneyProp",
+                "entityProp.dateProp",
+                "entityProp.booleanProp",
+                "entityProp.stringProp",
+                "collection.masterEntityProp",
+                "collection.integerProp",
+                "collection.bigDecimalProp",
+                "collection.dateProp",
+                "collection.stringProp",
+                "collection.booleanProp",
+                "collection.anyOfMasterEntityProp",
+                "collection.anyOfBigDecimalProp",
+                "collection.anyOfDateProp",
+                "collection.anyOfIntegerProp",
+                "collection.anyOfMoneyProp",
+                "collection.allOfMasterEntityProp",
+                "collection.allOfBigDecimalProp",
+                "collection.allOfDateProp",
+                "entityProp.collection.slaveEntityProp",
+                "entityProp.collection.integerProp",
+                "entityProp.collection.bigDecimalProp",
+                "entityProp.collection.dateProp",
+                "entityProp.collection.stringProp",
+                "entityProp.collection.booleanProp",
+                "entityProp.collection.allOfSlaveEntityProp",
+                "entityProp.collection.allOfBigDecimalProp",
+                "entityProp.collection.allOfDateProp",
+                "entityProp.collection.anyOfIntegerProp",
+                "entityProp.collection.anyOfMoneyProp");
 
-        });
-        for (final String propertyName : propertyNames) {
-            final QueryProperty qp = new QueryProperty(masterKlass, propertyName);
+        for (final var propertyName : propertyNames) {
+            final var qp = new QueryProperty(masterKlass, propertyName);
             queryProperties.put(propertyName, qp);
             qp.setValue(getEmptyValue(qp.getType(), qp.isSingle()));
             qp.setValue2(getEmptyValue(qp.getType(), qp.isSingle()));
@@ -187,8 +173,13 @@ public class DynamicQueryBuilderSqlTest {
 
     @Before
     public void set_up() {
+        final EntityFactory entityFactory = getInstance(EntityFactory.class);
+        dates = getInstance(IDates.class);
+
+        init(entityFactory);
+
         // make the values to be default for all properties before any test
-        for (final QueryProperty qp : queryProperties.values()) {
+        for (final var qp : queryProperties.values()) {
             qp.setValue(getEmptyValue(qp.getType(), qp.isSingle()));
             qp.setValue2(getEmptyValue(qp.getType(), qp.isSingle()));
             qp.setExclusive(null);
@@ -204,8 +195,7 @@ public class DynamicQueryBuilderSqlTest {
 
     @Test
     public void test_empty_query_composition_for_empty_query_properties() {
-        final ICompleted<? extends AbstractEntity<?>> expected = //
-        /**/iJoin; //
+        final ICompleted<? extends AbstractEntity<?>> expected = iJoin;
         final ICompleted<? extends AbstractEntity<?>> actual = createQuery(masterKlass, new ArrayList<>(queryProperties.values()), dates);
 
         assertEquals("Incorrect query model has been built.", expected.model(), actual.model());
@@ -596,14 +586,16 @@ public class DynamicQueryBuilderSqlTest {
 
         set_up();
         final QueryProperty property = queryProperties.get(propertyName);
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        final var values = List.of("some val 1*", "some val 2*");
+        property.setValue(values);
 
         final String cbn = property.getConditionBuildingName();
+        final var cbnNoKey = getPropertyNameWithoutKeyPart(cbn);
 
         final ICompleted<? extends AbstractEntity<?>> expected = //
         /**/iJoin.where().condition(cond() //
-        /*  */.condition(cond().prop(getPropertyNameWithoutKeyPart(cbn)).isNotNull().and() //
-        /*    */.condition(cond().prop(cbn).iLike().anyOfValues((Object[]) DynamicQueryBuilder.prepCritValuesForEntityTypedProp((List<String>) property.getValue())).model()) //
+        /*  */.condition(cond().prop(cbnNoKey).isNotNull().and() //
+        /*    */.condition(cond().prop(cbnNoKey).in().model(select(SlaveEntity.class).where().prop(KEY).iLike().anyOfValues(prepCritValuesForEntityTypedProp(values)).model()).model())
         /*  */.model()) //
         /**/.model()); //
         final ICompleted<? extends AbstractEntity<?>> actual = createQuery(masterKlass, new ArrayList<>(queryProperties.values()), dates);
@@ -657,7 +649,7 @@ public class DynamicQueryBuilderSqlTest {
                             .and()
                             .condition(
                                 cond().prop(cbnNoKey).in().model(subSelect)
-                                .or().prop(cbn).iLike().anyOfValues(prepCritValuesForEntityTypedProp(Arrays.asList(critValuesWithWildcard)))
+                                .or().prop(cbnNoKey).in().model(select(SlaveEntity.class).where().prop(KEY).iLike().anyOfValues(prepCritValuesForEntityTypedProp(Arrays.asList(critValuesWithWildcard))).model())
                                 .model())
                         .model())
                 .model();
@@ -671,11 +663,11 @@ public class DynamicQueryBuilderSqlTest {
     }
 
 
-    ////////////////////////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////// 2. Property level (Negation / Null) /////////////////////
-    ////////////////////////////////////////////////////////////////////////////////////////////
+    //---------------------------------------------------------------------------------------//
+    //------------------------------ 2. Property level (Negation / Null) --------------------//
+    //---------------------------------------------------------------------------------------//
 
-    ////////////////////////////////// 2.1. Is [Not] Null //////////////////////////////////////
+    //------------------------------- 2.1. Is [Not] Null ------------------------------------//
     @Test
     public void test_property_query_composition_with_missing_value() {
         final String propertyName = "dateProp";
@@ -715,7 +707,7 @@ public class DynamicQueryBuilderSqlTest {
         //assertEquals("Incorrect query parameter values has been built.", expected.model().getFinalModelResult(mappingExtractor).getParamValues(), actual.model().getFinalModelResult(mappingExtractor).getParamValues());
     }
 
-    ////////////////////////////////// 2.2. Direct conditions and Negation / Nulls //////////////////////////////////////
+    //-------------------- 2.2. Direct conditions and Negation / Nulls ----------------------//
 
     @Test
     public void test_property_query_composition_with_direct_condition() {
@@ -805,11 +797,11 @@ public class DynamicQueryBuilderSqlTest {
         //assertEquals("Incorrect query parameter values has been built.", expected.model().getFinalModelResult(mappingExtractor).getParamValues(), actual.model().getFinalModelResult(mappingExtractor).getParamValues());
     }
 
-    ////////////////////////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////// 3. Conditions level /////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////////////////////////
+    //---------------------------------------------------------------------------------------//
+    //-------------------------------- 3. Conditions level ----------------------------------//
+    //---------------------------------------------------------------------------------------//
 
-    ////////////////////////////////// 3.1. Non-collectional ///////////////////////////////////
+    //------------------------------- 3.1. Non-collectional ---------------------------------//
     @Test
     public void test_conditions_query_composition_with_a_couple_of_non_collectional_conditions() {
         queryProperties.get("bigDecimalProp").setValue(3);
@@ -1360,18 +1352,16 @@ public class DynamicQueryBuilderSqlTest {
     }
 
     @Test
-    public void test_union_entity_query_composition() {
-        final List<String> propertyNames = Arrays.asList(new String[] { //
-        "", //
-        "desc", //
-        "location", //
-        "location.workshop", //
-        "location.workshop.desc", //
-        "location.wagonSlot", //
-        "location.wagonSlot.wagon", //
-        "location.wagonSlot.position", //
-
-        });
+    public void conditions_for_union_members_are_combined_with_logical_AND() {
+        final List<String> propertyNames = List.of(
+                "",
+                "desc",
+                "location",
+                "location.workshop",
+                "location.workshop.desc",
+                "location.wagonSlot",
+                "location.wagonSlot.wagon",
+                "location.wagonSlot.position");
         final Map<String, QueryProperty> unionProps = new LinkedHashMap<>();
         for (final String propertyName : propertyNames) {
             final QueryProperty qp = new QueryProperty(TgBogie.class, propertyName);
@@ -1383,65 +1373,102 @@ public class DynamicQueryBuilderSqlTest {
         QueryProperty property = null;
 
         property = unionProps.get("");
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        property.setValue(List.of("some val 1*", "some val 2*"));
 
         property = unionProps.get("desc");
         property.setValue("Some string value");
 
         property = unionProps.get("location");
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        property.setValue(List.of("some val 1*", "some val 2*"));
 
         property = unionProps.get("location.workshop");
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        property.setValue(List.of("some val 1*", "some val 2*"));
 
         property = unionProps.get("location.workshop.desc");
         property.setValue("Some string value");
 
         property = unionProps.get("location.wagonSlot");
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        property.setValue(List.of("some val 1*", "some val 2*"));
 
         property = unionProps.get("location.wagonSlot.wagon");
-        property.setValue(Arrays.asList("some val 1*", "some val 2*"));
+        property.setValue(List.of("some val 1*", "some val 2*"));
 
         property = unionProps.get("location.wagonSlot.position");
         property.setValue(3);
         property.setValue2(7);
 
-        final ICompleted<? extends AbstractEntity<?>> expected = //
+        final ICompleted<? extends AbstractEntity<?>> expected =
         /**/select(select(TgBogie.class).model().setShouldMaterialiseCalcPropsAsColumnsInSqlQuery(true)).as(alias).where().condition(cond() //
         /*  */.condition(cond().prop(alias).isNotNull().and() //
-        /*    */.condition(cond().prop(alias + ".key").iLike().anyOfValues(new Object[] { "some val 1%", "some val 2%" }).model())//
+           /*    */.condition(cond().prop(alias).in().model(select(TgBogie.class).where().prop(KEY).iLike().anyOfValues("some val 1%", "some val 2%").model()).model())//
         /*  */.model()).and()//
         /*  */.condition(cond().prop(alias + ".desc").isNotNull().and() //
-        /*    */.condition(cond().prop(alias + ".desc").iLike().anyOfValues(new Object[] { "%Some string value%" }).model()) //
+        /*    */.condition(cond().prop(alias + ".desc").iLike().anyOfValues("%Some string value%").model()) //
         /*  */.model()).and()//
         /*  */.condition(cond().prop(alias + ".location").isNotNull().and() //
-        /*    */.condition(cond().prop(alias + ".location.key").iLike().anyOfValues(new Object[] { "some val 1%", "some val 2%" }).model())//
+        /*    */.condition(cond().prop(alias + ".location").in().model(select(TgBogieLocation.class).where().prop(KEY).iLike().anyOfValues("some val 1%", "some val 2%").model()).model())//
         /*  */.model()).and()//
-        /*    */.condition(cond()//
-        /*	*/.condition(cond()//
-        /*	  */.condition(cond().prop(alias + ".location.workshop").isNotNull().and()//
-        /*	    */.condition(cond().prop(alias + ".location.workshop.key").iLike().anyOfValues(new Object[] { "some val 1%", "some val 2%" }).model())//
+        /*    */.condition(cond().prop(alias + ".location.workshop").isNotNull().and()//
+        /*	    */.condition(cond().prop(alias + ".location.workshop").in().model(select(TgWorkshop.class).where().prop(KEY).iLike().anyOfValues("some val 1%", "some val 2%").model()).model())//
         /*	  */.model()).and()//
         /*	  */.condition(cond().prop(alias + ".location.workshop.desc").isNotNull().and()//
-        /*	    */.condition(cond().prop(alias + ".location.workshop.desc").iLike().anyOfValues(new Object[] { "%Some string value%" }).model())
+        /*	    */.condition(cond().prop(alias + ".location.workshop.desc").iLike().anyOfValues("%Some string value%").model())
                 /*	  */.model())//
-        /*	*/.model())//
-        /*    */.or()//
-        /*	*/.condition(cond()//
+        /*    */.and() // this used to be OR
         /*	  */.condition(cond().prop(alias + ".location.wagonSlot").isNotNull().and()//
-        /*	    */.condition(cond().prop(alias + ".location.wagonSlot.key").iLike().anyOfValues(new Object[] { "some val 1%", "some val 2%" }).model())//
+        /*	    */.condition(cond().prop(alias + ".location.wagonSlot").in().model(select(TgWagonSlot.class).where().prop(KEY).iLike().anyOfValues("some val 1%", "some val 2%").model()).model())//
         /*	  */.model()).and()//
         /*	  */.condition(cond().prop(alias + ".location.wagonSlot.wagon").isNotNull().and()//
-        /*	    */.condition(cond().prop(alias + ".location.wagonSlot.wagon.key").iLike().anyOfValues(new Object[] { "some val 1%", "some val 2%" }).model())//
+        /*	    */.condition(cond().prop(alias + ".location.wagonSlot.wagon").in().model(select(TgWagon.class).where().prop(KEY).iLike().anyOfValues("some val 1%", "some val 2%").model()).model())//
         /*	  */.model()).and()//
         /*	  */.condition(cond().prop(alias + ".location.wagonSlot.position").isNotNull().and()//
         /*	    */.condition(cond().prop(alias + ".location.wagonSlot.position").ge().iVal(3).and().prop(alias + ".location.wagonSlot.position").le().iVal(7).model())//
         /*	  */.model())//
-        /*	*/.model())//
-        /*    */.model())//
         /**/.model()); //
         final ICompleted<? extends AbstractEntity<?>> actual = createQuery(TgBogie.class, new ArrayList<>(unionProps.values()), dates);
         assertEquals("Incorrect query model for union entities has been built.", expected.model(), actual.model());
     }
+
+    //-------------------------  property authorisation tests -------------------------------//
+
+    @Test
+    public void authorised_prop_should_be_present_in_query() {
+        test_atomic_query_composition_for_range_type("authorisedProp");
+    }
+
+    @Test
+    public void unauthorised_prop_throws_authorisation_exception() {
+        removeAccessTo(MasterEntity_CanRead_unauthorisedProp_Token.class);
+
+        final QueryProperty property = queryProperties.get("unauthorisedProp");
+        property.setValue(3);
+        property.setValue2(7);
+
+        assertThatCode(() -> createCompletedQuery(MasterEntity.class, (Class<MasterEntity>) masterKlass, new ArrayList<>(queryProperties.values()), empty(), empty(), empty(), dates))
+                .hasMessage("Permission denied due to token [Master Entity Can Read property [unauthorisedProp]] restriction.");
+    }
+
+    @Test
+    public void unauthorised_prop_initiated_with_mnemonics_throws_authorisation_exception() {
+        removeAccessTo(MasterEntity_CanRead_unauthorisedProp_Token.class);
+
+        final QueryProperty property = queryProperties.get("unauthorisedProp");
+        property.setOrNull(true);
+
+        assertThatCode(() -> createCompletedQuery(MasterEntity.class, (Class<MasterEntity>) masterKlass, new ArrayList<>(queryProperties.values()), empty(), empty(), empty(), dates))
+                .hasMessage("Permission denied due to token [Master Entity Can Read property [unauthorisedProp]] restriction.");
+
+    }
+
+    /// This is more like just in case `token` would get associated with `UNIT_TEST_ROLE` by the base test class logic.
+    ///
+    private void removeAccessTo(final Class<? extends ISecurityToken> token) {
+        final SecurityRoleAssociationCo co = co(SecurityRoleAssociation.class);
+        co.removeAssociations(setOf(
+                co.new_()
+                        .setRole(co(UserRole.class).findByKey(UNIT_TEST_ROLE))
+                        .setSecurityToken(token)
+        ));
+    }
+
 }
