@@ -1,25 +1,22 @@
 package ua.com.fielden.platform.keygen;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import org.junit.Test;
+import ua.com.fielden.platform.dao.exceptions.EntityCompanionException;
+import ua.com.fielden.platform.test_config.AbstractDaoTestCase;
 
 import java.util.SortedSet;
 import java.util.TreeSet;
 
-import org.junit.Test;
+import static org.junit.Assert.*;
 
-import ua.com.fielden.platform.dao.exceptions.EntityCompanionException;
-import ua.com.fielden.platform.test_config.AbstractDaoTestCase;
-
-/**
- * Ensures correct generation of named numbers that are used for automatic entity key generations such as 
- * in case of work orders and purchase orders.
- * 
- * @author TG Team
- * 
- */
+/// Ensures correct generation of named numbers that are used for automatic entity key generations such as
+/// work order and purchase order numbers.
+///
 public class KeyNumberTest extends AbstractDaoTestCase {
+
+    public static final String KEY_RADIX_10 = "KEY_RADIX_10";
+    public static final String KEY_RADIX_36 = "KEY_RADIX_36";
+
     private final IKeyNumber coKeyNumber = getInstance(IKeyNumber.class);
 
     @Test
@@ -29,7 +26,7 @@ public class KeyNumberTest extends AbstractDaoTestCase {
             coKeyNumber.currNumber(newKey);
             fail("Getting the next number for non existing key should fail.");
         } catch (final EntityCompanionException ex) {
-            assertEquals(String.format("No number associated with key [%s].", newKey), ex.getMessage());
+            assertEquals("No number associated with key [%s].".formatted(newKey), ex.getMessage());
         }
         
         final Integer expected = 1;
@@ -39,23 +36,23 @@ public class KeyNumberTest extends AbstractDaoTestCase {
     
     @Test
     public void existing_keynumber_value_is_retrievable_by_key() {
-        assertEquals("Incorrect current WO number.", Integer.valueOf(500), coKeyNumber.currNumber("WO"));
+        assertEquals("Incorrect current number.", Integer.valueOf(500), coKeyNumber.currNumber(KEY_RADIX_10));
     }
 
     @Test
     public void nextNumber_returns_the_next_keynumber_value_and_simultaneously_persists_it() {
         final Integer nextNumber = 501;
-        assertEquals("Incorrectly generated next WO number.", nextNumber, coKeyNumber.nextNumber("WO"));
-        assertEquals("Incorrect current WO number after generating the next number.", nextNumber, coKeyNumber.currNumber("WO"));
+        assertEquals("Incorrectly generated next number.", nextNumber, coKeyNumber.nextNumber(KEY_RADIX_10));
+        assertEquals("Incorrect current number after generating the next number.", nextNumber, coKeyNumber.currNumber(KEY_RADIX_10));
     }
 
     @Test
     public void nextNumbers_with_count_1_is_equivalent_to_nextNumber() {
         final Integer nextNumber = 501;
-        final SortedSet<Integer> numbers = coKeyNumber.nextNumbers("WO", 1);
+        final SortedSet<Integer> numbers = coKeyNumber.nextNumbers(KEY_RADIX_10, 1);
         assertEquals("Unexpected number of generated values.", 1, numbers.size());
-        assertEquals("Incorrectly generated next WO number.", nextNumber, numbers.first());
-        assertEquals("Incorrect current WO number after generating the next number.", nextNumber, coKeyNumber.currNumber("WO"));
+        assertEquals("Incorrectly generated next number.", nextNumber, numbers.first());
+        assertEquals("Incorrect current number after generating the next number.", nextNumber, coKeyNumber.currNumber(KEY_RADIX_10));
     }
 
     @Test
@@ -66,23 +63,98 @@ public class KeyNumberTest extends AbstractDaoTestCase {
         expectedNumbers.add(503);
         expectedNumbers.add(504);
         expectedNumbers.add(505);
-        final SortedSet<Integer> numbers = coKeyNumber.nextNumbers("WO", 5);
+        final SortedSet<Integer> numbers = coKeyNumber.nextNumbers(KEY_RADIX_10, 5);
         assertEquals("Unexpected number of generated values.", 5, numbers.size());
         assertEquals(expectedNumbers, numbers);
-        assertEquals("Incorrect current WO number after generating the next number.", numbers.last(), coKeyNumber.currNumber("WO"));
+        assertEquals("Incorrect current number after generating the next number.", numbers.last(), coKeyNumber.currNumber(KEY_RADIX_10));
     }
 
     @Test
     public void nextNumbers_for_the_count_of_less_than_1_returns_an_empty_set() {
-        assertTrue("Empty set is expected.", coKeyNumber.nextNumbers("WO", 0).isEmpty());
-        assertTrue("Empty set is expected.", coKeyNumber.nextNumbers("WO", -1).isEmpty());
+        assertTrue("Empty set is expected.", coKeyNumber.nextNumbers(KEY_RADIX_10, 0).isEmpty());
+        assertTrue("Empty set is expected.", coKeyNumber.nextNumbers(KEY_RADIX_10, -1).isEmpty());
+    }
+
+    @Test
+    public void radix_outside_the_boundaries_throws_exception() {
+        try {
+            coKeyNumber.currNumber(KEY_RADIX_36, 37);
+            fail();
+        } catch (final NumberFormatException ex) {
+            assertEquals("radix 37 greater than Character.MAX_RADIX", ex.getMessage());
+        }
+        try {
+            coKeyNumber.nextNumber(KEY_RADIX_36, 1);
+            fail();
+        } catch (final NumberFormatException ex) {
+            assertEquals("radix 1 less than Character.MIN_RADIX", ex.getMessage());
+        }
+        try {
+            coKeyNumber.nextNumbers(KEY_RADIX_36, 3, 42);
+            fail();
+        } catch (final NumberFormatException ex) {
+            assertEquals("radix 42 greater than Character.MAX_RADIX", ex.getMessage());
+        }
+    }
+
+    @Test
+    public void existing_keynumber_value_with_radix_36_is_retrievable_by_key() {
+        assertEquals(Integer.valueOf("9Z", 36), coKeyNumber.currNumber(KEY_RADIX_36, 36));
+    }
+
+    @Test
+    public void currNumber_with_radix_36_returns_value_with_radix_36() {
+        assertEquals(Integer.valueOf("9Z", 36), coKeyNumber.currNumber(KEY_RADIX_36, 36));
+    }
+
+    @Test
+    public void nextNumber_with_radix_36_updates_the_persisted_value_with_radix_36() {
+        final Integer nextNumber = Integer.valueOf("A0", 36);
+        assertEquals(nextNumber, coKeyNumber.nextNumber(KEY_RADIX_36, 36));
+        assertEquals(nextNumber, coKeyNumber.currNumber(KEY_RADIX_36, 36));
+    }
+
+    @Test
+    public void key_number_value_is_stored_in_upper_case() {
+        final String nextValue = "A0";
+        final Integer nextNumber = Integer.valueOf(nextValue, 36);
+        assertEquals(nextNumber, coKeyNumber.nextNumber(KEY_RADIX_36, 36));
+        assertEquals(nextNumber, coKeyNumber.currNumber(KEY_RADIX_36, 36));
+        assertEquals(nextValue, coKeyNumber.findByKey(KEY_RADIX_36).getValue());
+    }
+
+    @Test
+    public void nextNumbers_with_radix_36_and_count_1_is_equivalent_to_nextNumber_with_radix_36() {
+        final String nextValue = "A0";
+        final Integer nextNumber = Integer.valueOf(nextValue, 36);
+        final SortedSet<Integer> numbers = coKeyNumber.nextNumbers(KEY_RADIX_36, 1, 36);
+        assertEquals(1, numbers.size());
+        assertEquals(nextNumber, numbers.first());
+        assertEquals(nextNumber, coKeyNumber.currNumber(KEY_RADIX_36, 36));
+        assertEquals(nextValue, coKeyNumber.findByKey(KEY_RADIX_36).getValue());
+    }
+
+    @Test
+    public void resetting_existing_keynumber_assigns_value_0() {
+        coKeyNumber.reset(KEY_RADIX_10);
+        assertEquals(Integer.valueOf(0), coKeyNumber.currNumber(KEY_RADIX_10));
+
+        coKeyNumber.reset(KEY_RADIX_36);
+        assertEquals(Integer.valueOf(0), coKeyNumber.currNumber(KEY_RADIX_36));
+    }
+
+    @Test
+    public void resetting_non_existing_keynumber_creates_it_with_value_0() {
+        coKeyNumber.reset("NON-EXISTING");
+        assertEquals(Integer.valueOf(0), coKeyNumber.currNumber("NON-EXISTING"));
     }
 
     @Override
     protected void populateDomain() {
         super.populateDomain();
         
-        save(new_(KeyNumber.class, "WO").setValue("500"));
+        save(new_(KeyNumber.class, KEY_RADIX_10).setValue("500"));
+        save(new_(KeyNumber.class, KEY_RADIX_36).setValue("9Z"));
     }
 
 }
