@@ -71,6 +71,7 @@ public class ApplicationDomain implements IApplicationDomainProvider {
         add(TgEntityForColourMaster.class);
         add(TgCreatePersistentStatusAction.class);
         add(TgDummyAction.class);
+        add(TgNoopAction.class);
         add(TgEntityWithPropertyDependency.class);
         add(TgEntityWithPropertyDescriptor.class);
         add(TgEntityWithPropertyDescriptorExt.class);
@@ -197,16 +198,16 @@ public class ApplicationDomain implements IApplicationDomainProvider {
         add(TgCentreDiffSerialisationNonPersistentCompositeChild.class);
         add(TgCategoryAttachment.class);
         add(TgDateTestEntity.class);
-
+        add(TgEntityWithIsPropertyOverriddenId.class);
     }
 
     @Override
     public List<Class<? extends AbstractEntity<?>>> entityTypes() {
-        return Collections.unmodifiableList(entityTypes.stream().collect(Collectors.toList()));
+        return Collections.unmodifiableList(entityTypes.stream().toList());
     }
 
     public static List<Class<? extends AbstractEntity<?>>> domainTypes() {
-        return Collections.unmodifiableList(domainTypes.stream().collect(Collectors.toList()));
+        return Collections.unmodifiableList(domainTypes.stream().toList());
     }
 
     public static Set<Class<? extends AbstractEntity<?>>> entityTypesSet() {
